--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,201 +1,60 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
-
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Roboto", 'Poppins', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
-
-.wholepage {
-    background-color: #f4f3ef;
-}
-
-.form-control {
-    box-shadow: none !important;
+body {
+  background-color: #f4f3ef !important;
 }
 
 .btn-primary {
-    background: #6F4AF0 !important;
+  background: #6f4af0 !important;
 }
 
 .header-link {
-    text-decoration: none;
-    color: #000000;
-    font-weight: 600;
+  text-decoration: none;
+  color: #000000;
+  font-weight: 600;
+}
+
+.form-control {
+  box-shadow: none !important;
 }
 
 a {
-    cursor: pointer;
+  cursor: pointer;
 }
 
-::selection {
-    background: #fa4299;
-    color: #fff;
+/* Home page */
+
+.col {
+  padding-top: 12px;
+  padding-bottom: 12px;
 }
 
-.wrapper {
-    overflow: hidden;
-    max-width: 500px;
-    background: #fff;
-    padding: 30px;
-    border-radius: 5px;
-    box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.1);
+.card-homePage {
+  background-color: #d9d9d9 !important;
+  border: none !important;
 }
 
-.wrapper .title-text {
-    display: flex;
-    width: 200%;
+a:link {
+  text-decoration: none;
+  color: #000000;
 }
 
-.wrapper .title {
-    width: 50%;
-    font-size: 35px;
-    font-weight: 600;
-    text-align: center;
-    transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+.card-link:visited {
+  color: gray;
 }
 
-.wrapper .slide-controls {
-    position: relative;
-    display: flex;
-    height: 50px;
-    width: 100%;
-    overflow: hidden;
-    margin: 30px 0 10px 0;
-    justify-content: space-between;
-    border: 1px solid lightgrey;
-    border-radius: 5px;
+a:hover {
+  color: #6f4af0 !important;
 }
 
-input[type="radio"] {
-    display: none;
+/* Hotel view */
+.hotel-img {
+  object-fit: cover;
+  height: 30vh;
+  width: 100%;
 }
 
-#signup:checked~.slider-tab {
-    left: 50%;
-}
-
-#signup:checked~label.signup {
-    color: #fff;
-    cursor: default;
-    user-select: none;
-}
-
-#signup:checked~label.login {
-    color: #000;
-}
-
-#login:checked~label.signup {
-    color: #000;
-}
-
-#login:checked~label.login {
-    cursor: default;
-    user-select: none;
-}
-
-.wrapper .form-container {
-    width: 100%;
-    overflow: hidden;
-}
-
-.form-container .form-inner {
-    display: flex;
-    width: 200%;
-}
-
-.form-container .form-inner form {
-    width: 50%;
-    transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-}
-
-.form-inner form .field {
-    height: 50px;
-    width: 100%;
-    margin-top: 20px;
-}
-
-.form-inner form .field input {
-    height: 100%;
-    width: 100%;
-    outline: none;
-    padding-left: 15px;
-    border-radius: 5px;
-    border: 1px solid lightgrey;
-    border-bottom-width: 2px;
-    font-size: 17px;
-    transition: all 0.3s ease;
-}
-
-.form-inner form .field input:focus {
-    border-color: #fc83bb;
-    /* box-shadow: inset 0 0 3px #fb6aae; */
-}
-
-.form-inner form .field input::placeholder {
-    color: #999;
-    transition: all 0.3s ease;
-}
-
-form .field input:focus::placeholder {
-    color: #b3b3b3;
-}
-
-.form-inner form .pass-link {
-    margin-top: 5px;
-}
-
-.form-inner form .signup-link {
-    text-align: center;
-    margin-top: 30px;
-}
-
-.form-inner form .pass-link a,
-.form-inner form .signup-link a {
-    color: #c94ef2;
-    text-decoration: none;
-}
-
-.form-inner form .pass-link a:hover,
-.form-inner form .signup-link a:hover {
-    text-decoration: underline;
-}
-
-form .btn {
-    height: 50px;
-    width: 100%;
-    border-radius: 5px;
-    position: relative;
-    overflow: hidden;
-}
-
-form .btn .btn-layer {
-    height: 100%;
-    width: 300%;
-    position: absolute;
-    left: -100%;
-    background: -webkit-linear-gradient(right, #6F4AF0, #c94ef2, #6F4AF0, #c94ef2);
-    border-radius: 5px;
-    transition: all 0.4s ease;
-    ;
-}
-
-form .btn:hover .btn-layer {
-    left: 0;
-}
-
-form .btn input[type="submit"] {
-    height: 100%;
-    width: 100%;
-    z-index: 1;
-    position: relative;
-    background: none;
-    border: none;
-    color: #fff;
-    padding-left: 0;
-    border-radius: 5px;
-    font-size: 20px;
-    font-weight: 500;
-    cursor: pointer;
-}
+/* Add hotel view */
+.form-control.add-hotel-input {
+  background-color: #BEBEBE !important;}
