--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,6 +6,10 @@ body {
 }
 
 .btn-primary {
+  background: -webkit-linear-gradient(right, #6F4AF0, #c94ef2) !important;
+}
+
+.btn-primary:hover {
   background: #6f4af0 !important;
 }
 
@@ -55,11 +59,17 @@ a:hover {
   width: 100%;
 }
 
-/* Add hotel view */
-.form-control.add-hotel-input {
-  background-color: #BEBEBE !important;}
-
 /* add Hotel view */
+
+.sub-button {
+  display: block;
+  width: 100%;
+  border: none;
+  padding: 14px 28px;
+  font-size: 16px;
+  cursor: pointer;
+  text-align: center;
+}
 
 body {
     height: 100vh;
@@ -67,6 +77,14 @@ body {
     font-family: Roboto;
     -webkit-text-size-adjust: 100%;
     -webkit-font-smoothing: antialiased;
+}
+
+.image250 {
+  display: inline-block;
+  width: 100%;
+  max-width: 150px;
+  height: 100%;
+  max-height: 150px;
 }
 
 * {
@@ -152,4 +170,37 @@ body {
 
 .card {
     background-color: #fff !important;
+}
+
+.input-file-container {
+  position: relative;
+  width: 250px;
+} 
+.js .input-file-trigger {
+  display: block;
+  padding: 16px 15px;
+  background: -webkit-linear-gradient(right, #947af1, #c94ef2);
+  color: #fff;
+  font-size: 1em;
+  border-radius: 10px;
+  margin-right: 15px;
+  cursor: pointer;
+}
+.js .input-file {
+  position: absolute;
+  width: 250px;
+  opacity: 0;
+  padding: 13px;
+  cursor: pointer;
+}
+.js .input-file:hover + .input-file-trigger,
+.js .input-file:focus + .input-file-trigger,
+.js .input-file-trigger:hover,
+.js .input-file-trigger:focus {
+  background: #6f4af0;
+  color: #fff;
+}
+
+input[type=file]::-webkit-file-upload-button {
+  cursor: pointer; 
 }
