--- a/src/css/style.css
+++ b/src/css/style.css
@@ -52,11 +52,38 @@ a:hover {
   color: #6f4af0 !important;
 }
 
-/* Hotel view */
-.hotel-img {
-  object-fit: cover;
-  height: 30vh;
-  width: 100%;
+.spinner {
+  animation: rotate 2s linear infinite;
+  z-index: 2;
+  position: absolute;
+  top: 50%;
+  margin-left: 450px;
+  width: 50px;
+  height: 50px;
+}
+.spinner .path {
+  stroke: #93bfec;
+  stroke-linecap: round;
+  animation: dash 1.5s ease-in-out infinite;
+}
+@keyframes rotate {
+  100% {
+    transform: rotate(360deg);
+ }
+}
+@keyframes dash {
+  0% {
+    stroke-dasharray: 1, 150;
+    stroke-dashoffset: 0;
+ }
+  50% {
+    stroke-dasharray: 90, 150;
+    stroke-dashoffset: -35;
+ }
+  100% {
+    stroke-dasharray: 90, 150;
+    stroke-dashoffset: -124;
+ }
 }
 
 /* add Hotel view */
