--- a/src/css/multiselect.css
+++ b/src/css/multiselect.css
@@ -1,58 +1,3 @@
-fieldset[disabled] .multiselect {
-    pointer-events: none
-}
-
-.multiselect__spinner {
-    position: absolute;
-    right: 1px;
-    top: 1px;
-    width: 48px;
-    height: 35px;
-    background: #fff;
-    display: block
-}
-
-.multiselect__spinner:after,
-.multiselect__spinner:before {
-    position: absolute;
-    content: "";
-    top: 50%;
-    left: 50%;
-    margin: -8px 0 0 -8px;
-    width: 16px;
-    height: 16px;
-    border-radius: 100%;
-    border-color: #c94ef2 transparent transparent;
-    border-style: solid;
-    border-width: 2px;
-    box-shadow: 0 0 0 1px transparent
-}
-
-.multiselect__spinner:before {
-    -webkit-animation: spinning 2.4s cubic-bezier(.41, .26, .2, .62);
-    animation: spinning 2.4s cubic-bezier(.41, .26, .2, .62);
-    -webkit-animation-iteration-count: infinite;
-    animation-iteration-count: infinite
-}
-
-.multiselect__spinner:after {
-    -webkit-animation: spinning 2.4s cubic-bezier(.51, .09, .21, .8);
-    animation: spinning 2.4s cubic-bezier(.51, .09, .21, .8);
-    -webkit-animation-iteration-count: infinite;
-    animation-iteration-count: infinite
-}
-
-.multiselect__loading-enter-active,
-.multiselect__loading-leave-active {
-    transition: opacity .4s ease-in-out;
-    opacity: 1
-}
-
-.multiselect__loading-enter,
-.multiselect__loading-leave-active {
-    opacity: 0
-}
-
 .multiselect,
 .multiselect__input,
 .multiselect__single {
@@ -68,7 +13,7 @@ fieldset[disabled] .multiselect {
     width: 100%;
     min-height: 40px;
     text-align: left;
-    color: #c94ef2
+    color: #000000
 }
 
 .multiselect * {
@@ -447,11 +392,6 @@ fieldset[disabled] .multiselect {
 [dir=rtl] .multiselect__clear {
     right: auto;
     left: 12px
-}
-
-[dir=rtl] .multiselect__spinner {
-    right: auto;
-    left: 1px
 }
 
 @-webkit-keyframes spinning {
