--- a/src/css/multiselect.css
+++ b/src/css/multiselect.css
@@ -1,8 +1,10 @@
 .multiselect,
 .multiselect__input,
 .multiselect__single {
-    font-family: inherit;
-    font-size: 16px;
+    font-family: 'Roboto';
+    -webkit-font-smoothing: antialiased;
+    -webkit-text-size-adjust: 100%;
+    font-size: 14px;
     touch-action: manipulation
 }
 
@@ -11,45 +13,12 @@
     display: block;
     position: relative;
     width: 100%;
-    min-height: 40px;
-    text-align: left;
-    color: #000000
-}
-
-.multiselect * {
-    box-sizing: border-box
-}
-
-.multiselect:focus {
-    outline: none
-}
-
-.multiselect--disabled {
-    background: #ededed;
-    pointer-events: none;
-    opacity: .6
-}
-
-.multiselect--active {
-    z-index: 50
-}
-
-.multiselect--active:not(.multiselect--above) .multiselect__current,
-.multiselect--active:not(.multiselect--above) .multiselect__input,
-.multiselect--active:not(.multiselect--above) .multiselect__tags {
-    border-bottom-left-radius: 0;
-    border-bottom-right-radius: 0
+    max-height: 56px;
+    color: #000000;
 }
 
 .multiselect--active .multiselect__select {
-    transform: rotate(180deg)
-}
-
-.multiselect--above.multiselect--active .multiselect__current,
-.multiselect--above.multiselect--active .multiselect__input,
-.multiselect--above.multiselect--active .multiselect__tags {
-    border-top-left-radius: 0;
-    border-top-right-radius: 0
+    transform: rotate(45deg)
 }
 
 .multiselect__input,
@@ -67,21 +36,12 @@
     vertical-align: top
 }
 
-.multiselect__input::-moz-placeholder {
-    color: #35495e
-}
-
-.multiselect__input:-ms-input-placeholder {
-    color: #35495e
-}
-
 .multiselect__input::placeholder {
-    color: #bebebe;
+    color: #c94ef2;
 }
 
-.multiselect__tag~.multiselect__input,
-.multiselect__tag~.multiselect__single {
-    width: auto
+.multiselect__::placeholder {
+    color: #c94ef2;
 }
 
 .multiselect__input:hover,
@@ -95,35 +55,27 @@
     outline: none
 }
 
-.multiselect__single {
-    padding-left: 5px;
-    margin-bottom: 8px
-}
-
-.multiselect__tags-wrap {
-    display: inline
-}
-
 .multiselect__tags {
     min-height: 40px;
     display: block;
     padding: 8px 40px 0 8px;
-    border-radius: 5px;
+    border-radius: 10px;
     border: 1px solid #e8e8e8;
     background: #FAFAFA;
-    font-size: 14px
+    font-size: 14px;
+    height: 66px;
 }
 
 .multiselect__tag {
     position: relative;
     display: inline-block;
-    padding: 4px 26px 4px 10px;
+    padding: 4px 26px 2px 10px;
     border-radius: 5px;
-    margin-right: 10px;
+    margin-right: 5px;
     color: #FAFAFA;
     line-height: 1;
     background: #6F4AF0;
-    margin-bottom: 5px;
+    margin-bottom: 1px;
     white-space: nowrap;
     overflow: hidden;
     max-width: 100%;
@@ -152,10 +104,6 @@
     font-size: 14px
 }
 
-.multiselect__tag-icon:focus:after,
-.multiselect__tag-icon:hover:after {
-    color: #fff
-}
 
 .multiselect__current {
     min-height: 40px;
@@ -169,31 +117,25 @@
 
 .multiselect__current,
 .multiselect__select {
-    line-height: 16px;
     box-sizing: border-box;
     display: block;
-    margin: 0;
     text-decoration: none;
     cursor: pointer
 }
 
 .multiselect__select {
     position: absolute;
-    width: 40px;
-    height: 38px;
-    right: 1px;
-    top: 1px;
-    padding: 4px 8px;
-    text-align: center;
+    width: 50px;
+    height: 30px;
+    right: 0px;
     transition: transform .2s ease
 }
 
 .multiselect__select:before {
     position: relative;
-    right: 0;
-    top: 65%;
+    top: 35px;
+    left: 25px;
     color: #999;
-    margin-top: 4px;
     border-style: solid;
     border-width: 5px 5px 0 5px;
     border-color: #999 transparent transparent transparent;
@@ -201,9 +143,14 @@
 }
 
 .multiselect__placeholder {
-    color: #adadad;
+    font-family: 'Roboto';
     display: inline-block;
-    padding: 12px
+    position: absolute;
+    left: 12px;
+    top: 25px;
+    font-size: 16px;
+    color: rgba(53, 53, 53, 0.5);
+    font-weight: 500;
 }
 
 .multiselect--active .multiselect__placeholder {
@@ -270,7 +217,7 @@
     position: absolute;
     line-height: 40px;
     padding-right: 12px;
-    padding-left: 20px;
+    padding-left: 30px;
     font-size: 13px
 }
 
@@ -365,33 +312,6 @@
     line-height: 20px;
     display: inline-block;
     vertical-align: top
-}
-
-[dir=rtl] .multiselect {
-    text-align: right
-}
-
-[dir=rtl] .multiselect__select {
-    right: auto;
-    left: 1px
-}
-
-[dir=rtl] .multiselect__tags {
-    padding: 8px 8px 0 40px
-}
-
-[dir=rtl] .multiselect__content {
-    text-align: right
-}
-
-[dir=rtl] .multiselect__option:after {
-    right: auto;
-    left: 0
-}
-
-[dir=rtl] .multiselect__clear {
-    right: auto;
-    left: 12px
 }
 
 @-webkit-keyframes spinning {
