--- a/src/css/LogReg.css
+++ b/src/css/LogReg.css
@@ -1,180 +1,189 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap");
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+
+.dropdown-menu {
+  --bs-dropdown-link-active-bg: #adb5bd !important;
 }
 
 /* Login & Register view */
 ::selection {
-    background: #fa4299;
-    color: #fff;
+  background: #fa4299;
+  color: #fff;
 }
 
 .wrapper {
-    overflow: hidden;
-    max-width: 500px;
-    background: #fff;
-    padding: 30px;
-    border-radius: 5px;
-    box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  max-width: 500px;
+  background: #fff;
+  padding: 30px;
+  border-radius: 5px;
+  box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.1);
 }
 
 .wrapper .title-text {
-    display: flex;
-    width: 200%;
+  display: flex;
+  width: 200%;
 }
 
 .wrapper .title {
-    width: 50%;
-    font-size: 35px;
-    font-weight: 600;
-    text-align: center;
-    transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  width: 50%;
+  font-size: 35px;
+  font-weight: 600;
+  text-align: center;
+  transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
 .wrapper .slide-controls {
-    position: relative;
-    display: flex;
-    height: 50px;
-    width: 100%;
-    overflow: hidden;
-    margin: 30px 0 10px 0;
-    justify-content: space-between;
-    border: 1px solid lightgrey;
-    border-radius: 5px;
+  position: relative;
+  display: flex;
+  height: 50px;
+  width: 100%;
+  overflow: hidden;
+  margin: 30px 0 10px 0;
+  justify-content: space-between;
+  border: 1px solid lightgrey;
+  border-radius: 5px;
 }
 
 input[type="radio"] {
-    display: none;
+  display: none;
 }
 
-#signup:checked~.slider-tab {
-    left: 50%;
+#signup:checked ~ .slider-tab {
+  left: 50%;
 }
 
-#signup:checked~label.signup {
-    color: #fff;
-    cursor: default;
-    user-select: none;
+#signup:checked ~ label.signup {
+  color: #fff;
+  cursor: default;
+  user-select: none;
 }
 
-#signup:checked~label.login {
-    color: #000;
+#signup:checked ~ label.login {
+  color: #000;
 }
 
-#login:checked~label.signup {
-    color: #000;
+#login:checked ~ label.signup {
+  color: #000;
 }
 
-#login:checked~label.login {
-    cursor: default;
-    user-select: none;
+#login:checked ~ label.login {
+  cursor: default;
+  user-select: none;
 }
 
 .wrapper .form-container {
-    width: 100%;
-    overflow: hidden;
+  width: 100%;
+  overflow: hidden;
 }
 
 .form-container .form-inner {
-    display: flex;
-    width: 200%;
+  display: flex;
+  width: 200%;
 }
 
 .form-container .form-inner form {
-    width: 50%;
-    transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  width: 50%;
+  transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
 .form-inner form .field {
-    height: 50px;
-    width: 100%;
-    margin-top: 20px;
+  height: 50px;
+  width: 100%;
+  margin-top: 20px;
 }
 
 .form-inner form .field input {
-    height: 100%;
-    width: 100%;
-    outline: none;
-    padding-left: 15px;
-    border-radius: 5px;
-    border: 1px solid lightgrey;
-    border-bottom-width: 2px;
-    font-size: 17px;
-    transition: all 0.3s ease;
+  height: 100%;
+  width: 100%;
+  outline: none;
+  padding-left: 15px;
+  border-radius: 5px;
+  border: 1px solid lightgrey;
+  border-bottom-width: 2px;
+  font-size: 17px;
+  transition: all 0.3s ease;
 }
 
 .form-inner form .field input:focus {
-    border-color: #fc83bb;
-    /* box-shadow: inset 0 0 3px #fb6aae; */
+  border-color: #fc83bb;
+  /* box-shadow: inset 0 0 3px #fb6aae; */
 }
 
 .form-inner form .field input::placeholder {
-    color: #999;
-    transition: all 0.3s ease;
+  color: #999;
+  transition: all 0.3s ease;
 }
 
 form .field input:focus::placeholder {
-    color: #b3b3b3;
+  color: #b3b3b3;
 }
 
 .form-inner form .pass-link {
-    margin-top: 5px;
+  margin-top: 5px;
 }
 
 .form-inner form .signup-link {
-    text-align: center;
-    margin-top: 30px;
+  text-align: center;
+  margin-top: 30px;
 }
 
 .form-inner form .pass-link a,
 .form-inner form .signup-link a {
-    color: #c94ef2;
-    text-decoration: none;
+  color: #c94ef2;
+  text-decoration: none;
 }
 
 .form-inner form .pass-link a:hover,
 .form-inner form .signup-link a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 form .btn {
-    height: 50px;
-    width: 100%;
-    border-radius: 5px;
-    position: relative;
-    overflow: hidden;
+  height: 50px;
+  width: 100%;
+  border-radius: 5px;
+  position: relative;
+  overflow: hidden;
 }
 
 form .btn .btn-layer {
-    height: 100%;
-    width: 300%;
-    position: absolute;
-    left: -100%;
-    background: -webkit-linear-gradient(right, #6F4AF0, #c94ef2, #6F4AF0, #c94ef2);
-    border-radius: 5px;
-    transition: all 0.4s ease;
-    ;
+  height: 100%;
+  width: 300%;
+  position: absolute;
+  left: -100%;
+  background: -webkit-linear-gradient(
+    right,
+    #6f4af0,
+    #c94ef2,
+    #6f4af0,
+    #c94ef2
+  );
+  border-radius: 5px;
+  transition: all 0.4s ease;
 }
 
 form .btn:hover .btn-layer {
-    left: 0;
+  left: 0;
 }
 
 form .btn input[type="submit"] {
-    height: 100%;
-    width: 100%;
-    z-index: 1;
-    position: relative;
-    background: none;
-    border: none;
-    color: #fff;
-    padding-left: 0;
-    border-radius: 5px;
-    font-size: 20px;
-    font-weight: 500;
-    cursor: pointer;
+  height: 100%;
+  width: 100%;
+  z-index: 1;
+  position: relative;
+  background: none;
+  border: none;
+  color: #fff;
+  padding-left: 0;
+  border-radius: 5px;
+  font-size: 20px;
+  font-weight: 500;
+  cursor: pointer;
 }
